force-app/main/default/objects/Insolvency_Account_Snapshot__c/Insolvency_Account_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Insolvency Account Snapshots</description>
    <label>Insolvency Account Snapshot</label>
    <nameField>
        <displayFormat>IASS-{00000}</displayFormat>
        <label>Insolvency Account Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insolvency Account Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>