force-app/main/default/objects/Insolvency_Account_Snapshot__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Bank Name</description>
    <inlineHelpText>Bank Name</inlineHelpText>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scotia Bank</fullName>
            </value>
            <value>
                <fullName>SPL</fullName>
            </value>
            <value>
                <fullName>SDA</fullName>
            </value>
            <value>
                <fullName>Fairstone</fullName>
            </value>
            <value>
                <fullName>Easy Financial Services Ltd</fullName>
            </value>
            <value>
                <fullName>Canadian Tire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>