force-app/main/default/objects/Insolvency_Account_Snapshot__c/fields/Number_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Accounts__c</fullName>
    <description>Number of Accounts</description>
    <formula>Number_of_Secured_Accounts__c + Number_of_Unsecured_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Accounts</inlineHelpText>
    <label>Number of Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>