force-app/main/default/objects/Insolvency_Account_Snapshot__c/fields/Number_of_Secured_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Secured_Accounts__c</fullName>
    <description>Number of Secured Accounts</description>
    <inlineHelpText>Number of Secured Accounts</inlineHelpText>
    <label>Number of Secured Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>