force-app/main/default/objects/Insolvency_Account_Snapshot__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <description>Processing Status</description>
    <inlineHelpText>Processing Status</inlineHelpText>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>For Owner Review</fullName>
            </value>
            <value>
                <fullName>Wait / Hold</fullName>
            </value>
            <value>
                <fullName>PoC Details Provided</fullName>
            </value>
            <value>
                <fullName>PoC Package Generated</fullName>
            </value>
            <value>
                <fullName>Claim Filed</fullName>
            </value>
            <value>
                <fullName>Annulled</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
            <value>
                <fullName>No PoC Required</fullName>
            </value>
            <value>
                <fullName>Withdraw PoC</fullName>
            </value>
            <value>
                <fullName>Claim Withdrawn</fullName>
            </value>
            <value>
                <fullName>Trustee Followup</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>