force-app/main/default/objects/Insolvency_Account_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Snapshot Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Snapshot Date</inlineHelpText>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>