force-app/main/default/objects/Insolvency_Account_Snapshot__c/fields/Total_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Claim_Amount__c</fullName>
    <description>Total Claim Amount</description>
    <formula>Total_Secured_Claim_Amount__c + Total_Unsecured_Claim_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Claim Amount</inlineHelpText>
    <label>Total Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>