force-app/main/default/objects/Insolvency_Account_Snapshot__c/fields/Total_Secured_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Secured_Claim_Amount__c</fullName>
    <description>Total Secured Claim Amount</description>
    <inlineHelpText>Total Secured Claim Amount</inlineHelpText>
    <label>Total Secured Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>